--- a/src/globals.css
+++ b/src/globals.css
@@ -66,32 +66,32 @@
   }
 }
 
-.shimmer, .shimmer-invert {
-  @apply relative overflow-hidden;
-
-  &:after {
-      background-color: #ffffff;
-      content: "";
-      height: 200%;
-      width: 30%;
-      left: -60%;
-      top: -50%;
-      opacity: .2;
-      position: absolute;
-      -webkit-transform: rotate(35deg);
-      transform: rotate(35deg);
-      -webkit-transition: all 1s cubic-bezier(.19, 1, .22, 1);
-      transition: all 1s cubic-bezier(.19, 1, .22, 1);
-  }
-
-  &:hover {
-      &:after {
-          left: 130%;
-      }
-  }
+.shimmer,
+.shimmer-invert {
+  position: relative;
+  overflow: hidden;
 }
+
+.shimmer:after,
 .shimmer-invert:after {
-  background-color: #000;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0px;
+  opacity: 0.2;
+  background: linear-gradient(-45deg, transparent 0%, transparent 53%, #fff 53%, #fff 60%, transparent 60%, transparent 100%);
+  background-size: 300%;
+  background-position-x: 100%;
+  -webkit-transition: all 1s cubic-bezier(.19, 1, .22, 1);
+  transition: all 1s cubic-bezier(.19, 1, .22, 1);
+}
+.shimmer:hover:after {
+  background-position-x: -15%;
+}
+
+.shimmer-invert:after {
+  background: linear-gradient(-45deg, transparent 0%, transparent 53%, #000 53%, #000 60%, transparent 60%, transparent 100%);
   opacity: .05;
 }
 
