--- a/src/globals.css
+++ b/src/globals.css
@@ -80,18 +80,18 @@
   height: 100%;
   inset: 0px;
   opacity: 0.2;
-  background: linear-gradient(-45deg, transparent 0%, transparent 53%, #fff 53%, #fff 60%, transparent 60%, transparent 100%);
+  background-image: linear-gradient(-45deg, transparent 0%, transparent 53%, #fff 53%, #fff 60%, transparent 60%, transparent 100%);
   background-size: 300%;
   background-position-x: 100%;
   -webkit-transition: all 1s cubic-bezier(.19, 1, .22, 1);
   transition: all 1s cubic-bezier(.19, 1, .22, 1);
 }
-.shimmer:hover:after {
+.shimmer:hover:after, .shimmer-invert:hover:after {
   background-position-x: -15%;
 }
 
 .shimmer-invert:after {
-  background: linear-gradient(-45deg, transparent 0%, transparent 53%, #000 53%, #000 60%, transparent 60%, transparent 100%);
+  background-image: linear-gradient(-45deg, transparent 0%, transparent 53%, #000 53%, #000 60%, transparent 60%, transparent 100%);
   opacity: .05;
 }
 
