--- a/src/globals.css
+++ b/src/globals.css
@@ -93,21 +93,13 @@
   --color-border: var(--color-gray-200);
   --color-input: hsl(210, 1%, 93%);
   --color-ring: hsl(var(--ring));
-  --color-background: hsl(var(--background));
-  --color-foreground: hsl(var(--foreground));
+  --color-background: hsl(0, 0%, 100%);
+  --color-foreground: hsl(222.2, 84%, 4.9%);
 
-  --color-secondary: hsl(var(--secondary));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
+  --color-secondary: var(--color-gray-200);
+  --color-secondary-foreground: var(--color-gray-900);
 
-  --color-muted: hsl(var(--muted));
-  --color-muted-foreground: hsl(var(--muted-foreground));
-
-  --color-accent: hsl(var(--accent));
-  --color-accent-foreground: hsl(var(--accent-foreground));
-
-  --color-popover: hsl(var(--popover));
-  --color-popover-foreground: hsl(var(--popover-foreground));
-
+  --radius: 0.5rem;
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
   --radius-sm: calc(var(--radius) - 4px);
@@ -121,18 +113,24 @@
   --font-lato: var(--font-lato);
   --font-roboto: var(--font-roboto-slab);
 
+  --ring: 357, 69%, 80%;
+
+
   @keyframes accordion-down {
     0% {
       height: 0;
     }
+
     100% {
       height: var(--radix-accordion-content-height);
     }
   }
+
   @keyframes accordion-up {
     0% {
       height: var(--radix-accordion-content-height);
     }
+
     100% {
       height: 0;
     }
@@ -153,6 +151,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -162,71 +161,8 @@
   }
 }
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 357 69% 49%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 357, 69%, 79%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
-}
-
 @layer utilities {
+
   .shimmer,
   .shimmer-invert {
     position: relative;
@@ -241,35 +177,32 @@
     height: 100%;
     inset: 0px;
     opacity: 0.2;
-    background-image: linear-gradient(
-      -45deg,
-      transparent 0%,
-      transparent 53%,
-      #fff 53%,
-      #fff 60%,
-      transparent 60%,
-      transparent 100%
-    );
+    background-image: linear-gradient(-45deg,
+        transparent 0%,
+        transparent 53%,
+        #fff 53%,
+        #fff 60%,
+        transparent 60%,
+        transparent 100%);
     background-size: 300%;
     background-position-x: 100%;
     -webkit-transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
     transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
   }
+
   .shimmer:hover:after,
   .shimmer-invert:hover:after {
     background-position-x: -15%;
   }
 
   .shimmer-invert:after {
-    background-image: linear-gradient(
-      -45deg,
-      transparent 0%,
-      transparent 53%,
-      #000 53%,
-      #000 60%,
-      transparent 60%,
-      transparent 100%
-    );
+    background-image: linear-gradient(-45deg,
+        transparent 0%,
+        transparent 53%,
+        #000 53%,
+        #000 60%,
+        transparent 60%,
+        transparent 100%);
     opacity: 0.05;
   }
 
